<resources>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_default_display_name2">John Again</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!--Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_notification_new_message">enable_notifications_message</string>
    <string name="key_notification_new_message_ringtone">notifications_ringtone</string>
    <string name="uri_ringtone_default_value">content://settings/system/notification_sound</string>
    <string name="key_notifications_new_message_vibrate">notifications_new_message_vibrate</string>
    <string name="pref_notifications_default" translatable="false">true</string>
    <string name="key_sync_frequency">sync_frequency</string>
    <string name="pref_category_status_key">category_status</string>

    <!-- Empty Category Database -->
    <string name="empty_category_list">No Category Information Available</string>
    <string name="empty_category_list_no_network">No category information available. The network is not available to fetch weather data.</string>
    <string name="empty_category_list_server_down">No category information available. The server is not returning data.</string>
    <string name="empty_category_list_server_error">No category information available. The server is not returning valid data. Please check for an updated version of the app.</string>
    <string name="not_valid_data_from_server">Not able to find valid product information from server.</string>

</resources>
