<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:key="@string/key_notification_new_message"
        android:title="@string/pref_title_new_message_notifications"
        android:defaultValue="true" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:key="@string/key_notification_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:dependency="@string/key_notification_new_message"
        android:ringtoneType="notification"
        android:defaultValue="@string/uri_ringtone_default_value" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:key="@string/key_notifications_new_message_vibrate"
        android:dependency="@string/key_notification_new_message"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />

</PreferenceScreen>
